# EasyPlot

./: CMakeLists.txt  Doxyfile  README.en.md  README.md  configure.bat  configureClang.bat  cop2git.bat  copy.bat  copyLib.bat  create_debug.bat  create_release.bat  create_release_2019.bat  run.bat
examples/: CMakeLists.txt
examples/XUtilty/: CMakeLists.txt  xutilty_test.cpp
examples/dataBase/: CMakeLists.txt  database_test.cpp
examples/xalgo/: CMakeLists.txt  xalgo_test.cpp
examples/xlog/: CMakeLists.txt  xlog_test.cpp
examples/xmvd/: CMakeLists.txt  xmvd_test.cpp
examples/xopengl/: CMakeLists.txt  xopengl_test.cpp
examples/xstorage/: CMakeLists.txt  xstorage_test.cpp
ext/xgenerator/: .gitignore  CMakeLists.txt  create.bat  run.bat
ext/xgenerator/src/: XASTConsumer.cpp  XASTConsumer.h  XASTFrontendAction.cpp  XASTFrontendAction.h  XASTVisiror.cpp  XASTVisiror.h  main.cpp  test.md
source/dataBase/: CMakeLists.txt  XClolor.cpp  XClolor.h  XDataArray.cpp  XDataArray.h  XDataAttribute.cpp  XDataAttribute.h  XDataBaseObject.cpp  XDataBaseObject.h  XDataList.cpp  XDataList.h  XDataObject.cpp  XDataObject.h  XDataPath.cpp  XDataPath.h  XObjectFactory.cpp  XObjectFactory.h  XRefAttribute.cpp  XRefAttribute.h  XTimeStamp.cpp  XTimeStamp.h  XVector.cpp  XVector.h  databaseApi.h  dataobject.cpp  dataobject.h  dllmain.cpp
source/easyPlot/: CMakeLists.txt  XEasyPlotWidget.cpp  XEasyPlotWidget.h  easyPlotWidget.cpp  easyPlotWidget.h
source/lib00_utilty/: CMakeLists.txt  XUtilty.cpp  XUtilty.h  myUtilty.cpp  myUtilty.h
source/lib00_utilty/gp/: XTraits.hpp  XTraits2.hpp  abstractfactory.hpp  classProcessorFactory.hpp  singlefactory.hpp  xtypelist.hpp  xvaluelist.hpp
source/lib01_shader/: CMakeLists.txt  XBaseShader.cpp  XBaseShader.h  XComputeShader.cpp  XComputeShader.h  xshader.cpp  xshader.h  xshaderApi.h  xshaderManger.cpp  xshaderManger.h
source/lib02_camera/: CMakeLists.txt  XBaseCamera.cpp  XBaseCamera.h  XCameraApi.h  XTrackBallCamera.cpp  XTrackBallCamera.h  xcamera.cpp  xcamera.h
source/lib05_shape/: 1.json  CMakeLists.txt  Init.cpp  Init.h  XAxisItem.cpp  XAxisItem.h  XBarItem.cpp  XBarItem.h  XChartItem.cpp  XChartItem.h  XChartItem2.cpp  XChartItem2.h  XCheckBoxItem.cpp  XCheckBoxItem.h  XCompositeItem.h  XGeometryNode.cpp  XGeometryNode.h  XGraphicsItem.cpp  XGraphicsItem.h  XGridItem.cpp  XGridItem.h  XLegendItem.cpp  XLegendItem.h  XLegendRowItem.cpp  XLegendRowItem.h  XLineItem.cpp  XLineItem.h  XPolyline.cpp  XPolyline.h  XRectItem.cpp  XRectItem.h  XRenderNode.cpp  XRenderNode.h  XRenderNodeAttribute.cpp  XRenderNodeAttribute.h  XScreenTextItem.cpp  XScreenTextItem.h  XTextItem.cpp  XTextItem.h  XTransformItem.cpp  (+27 more)
source/lib05_shape/actor2d/: XBarItem.h  XChartItem.cpp  XChartItem.h  XChartItem2.cpp  XChartItem2.h  XCheckBoxItem.h  XCompositeItem.h  XGridItem.cpp  XGridItem.h  XLegendItem.h  XLegendRowItem.cpp  XLegendRowItem.h  XLineItem.h  XPolyline.h  XRectItem.h  XScreenTextItem.h  XTextItem.h  XTransformItem.h
source/lib05_shape/datasource/: xCustomSource.cpp  xCustomSource.h  xFrustumSource.cpp  xFrustumSource.h  xTorusSource.h  xchamferCubeSource.cpp  xchamferCubeSource.h  xconeSource.h  xcubeSource.cpp  xcubeSource.h  xcylinderSource.cpp  xcylinderSource.h  xfileSource.cpp  xfileSource.h  xregularPrimSource.cpp  xregularPrimSource.h  xrotateLoftedGeometrySource.cpp  xrotateLoftedGeometrySource.h  xshapeSource.cpp  xshapeSource.h  xsphereSource.cpp  xsphereSource.h
source/lib05_shape/filter/: xshapeSourceCombineFilter.cpp  xshapeSourceCombineFilter.h  xshapeSourceTransformFilter.cpp  xshapeSourceTransformFilter.h
source/lib05_shape/mapper/: XPolyDataMapper.cpp  XPolyDataMapper.h
source/lib05_shape/renderNode3d/: XArrowRenderNode.cpp  XArrowRenderNode.h  XFullScreenQuadNode.cpp  XFullScreenQuadNode.h  XGroupRenderNode3d.cpp  XGroupRenderNode3d.h  XInfinitePlaneRenderNode.cpp  XInfinitePlaneRenderNode.h  XRectRenderNode.cpp  XRectRenderNode.h  XSphereRenderNode.cpp  XSphereRenderNode.h  XTorusRenderNode.h  XTransformGizmoRenderNode.cpp  XTransformGizmoRenderNode.h
source/lib08_freetype/: CMakeLists.txt  xfreetype.cpp  xfreetype.h
source/lib09_panel/: CMakeLists.txt  ColorPickButton.cpp  ColorPickButton.h  CustomToolButton.h  FboTest.cpp  FboTest.h  FboTest.ui  FontSetDlg.cpp  FontSetDlg.h  GridSetDlg.cpp  GridSetDlg.h  ScreenShotDlg.cpp  ScreenShotDlg.h  XPanleApi.h
source/lib09_panel/ui/: FboTest.ui  FontSetDlg.ui  (+2 more)
source/libPanle01_XOpenGLWidget/: CMakeLists.txt  XGLWidget.cpp  XGLWidget.h  XOpenGLWidget.cpp  XOpenGLWidget.h
source/render/: CMakeLists.txt  CameraNavigationHandler.cpp  CameraNavigationHandler.h  Init.cpp  Init.h  XInteractionEventHandler.cpp  XInteractionEventHandler.h  XManipulatorHandler.cpp  XManipulatorHandler.h  XOpenGLRenderWindow.cpp  XOpenGLRenderWindow.h  XRender.cpp  XRender.h  XRenderApi.h  XRenderCamera.cpp  XRenderCamera.h  XRenderInteractionEventHandler.cpp  XRenderInteractionEventHandler.h  XRenderMultiModeInteractionHandler.cpp  XRenderMultiModeInteractionHandler.h  XRenderPickHandler.cpp  XRenderPickHandler.h  XRenderPort.cpp  XRenderPort.h  XRenderType.h  XRenderWindowEventDispatch.cpp  XRenderWindowEventDispatch.h  XRenderWindowInteractor.cpp  XRenderWindowInteractor.h  XViewPicker3D.cpp  XViewPicker3D.h  bindings.cpp  dllmain.cpp  renderApi.h
source/xalgo/: CMakeLists.txt  XAlgo.cpp  XAlgo.h  XAlgoApi.h
source/xlog/: CMakeLists.txt  XLogger.cpp  XLogger.h  dllmain.cpp  xlogApi.h
source/xmvd/: CMakeLists.txt  Init.cpp  Init.h  XAttrItemDelegate.cpp  XAttrItemDelegate.h  XColorCombobox.cpp  XColorCombobox.h  XDataObjectTableModel.cpp  XDataObjectTableModel.h  XDataObjectTableView.cpp  XDataObjectTableView.h  XDataObjectTreeItem.cpp  XDataObjectTreeItem.h  XDataObjectTreeModel.cpp  XDataObjectTreeModel.h  XDataObjectTreeView.cpp  XDataObjectTreeView.h  XObjectInspectorView.cpp  XObjectInspectorView.h  dllmain.cpp  xmvdApi.h
source/xopenglwidget/: CMakeLists.txt  XGLWidget.h
source/xsignal/: CMakeLists.txt  XSignal.h
source/xtest/: CMakeLists.txt  XTest.cpp  XTest.h  xtestApi.h
(+199 files in other folders)
